set my profile photo

--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -79,7 +79,7 @@
         <div class="user-icon-container">
           <img
             class="current-user-picture"
-            src="profile-pictures/my-channel.jpeg"
+            src="profile-pictures/anjan.jpg"
             alt=""
           />
           <div class="tooltip">Profile</div>
